--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "gsap": "^3.10.4",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.5.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
-  }, 
+  },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider start",
     "build": "react-scripts build  --openssl-legacy-provider build",
@@ -38,8 +38,8 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
